# web

./: .dockerignore  .envrc.sample  .gitignore  .isort.cfg  .travis.yml  Dockerfile  Pipfile  conftest.py  docker-entrypoint.sh  pyproject.toml  requirements-base.txt  requirements.txt  setup.cfg  setup.py  tasks.py
strut/: __init__.py  apps.py  asgi.py  consumers.py  context_processors.py  routing.py  settings.py  urls.py  wsgi.py
strut/cli/: __init__.py  django.py  migrate.py  run.py  shell.py
strut/db/: utils.py
strut/db/models/: base.py
strut/downloaders/: youtube.py
strut/http/: __init__.py
strut/mediaresolvers/: base.py  soundcloud.py  youtube.py
strut/middleware/: http.py  security.py
strut/migrations/: 0001_initial.py  0002_user_settings.py
strut/models/: __init__.py  device.py  files.py  firmware.py  lockitron.py  music.py  organization.py  user.py
strut/schemas/: music.py  organization.py  user.py
strut/services/: http.py  push.py  worker.py
strut/social_auth/: middleware.py  pipeline.py
strut/static/: app.css  app.js  components.js  dashboard.js  deviceSetup.js  index.css  organizationMembers.js  userDetails.js  utils.js
strut/static/fonts/: fonts.css
strut/tasks/: __init__.py  music.py
strut/templates/: app.html  dashboard.html  index.html  logout.html  setup.html  welcome.txt
strut/templatetags/: core.py
strut/views/: agent.py  api.py  hooks.py  static.py  ui.py
tests/views/: test_ui.py
